tests/errors/lifetime/reborrow/mut_reborrow_of_out_precondition_fails.sim

        extern fn sink(r: &mut i64);
        fn f(r: &out i64) {
          s: &mut i64;
          entry:
            s = &mut r.*;
            call sink(move s);
            return
        }
        